--- a/pages/18771.html
+++ b/pages/18771.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Lars Hörmander in nLab
+      Hörmander&#39;s criterion in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Lars Hörmander
+      Hörmander&#39;s criterion
   </h1>
 
 
@@ -308,82 +308,194 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div style='float: right; margin: 0 10px 10px 0;'>
-<img src='https://ncatlab.org/nlab/files/HoermanderPortrait.jpg' width='200'/>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='functional_analysis'>Functional analysis</h4>
+
+<div class='hide'>
+<ul>
+<li><strong><a class='existingWikiWord' href='/nlab/show/functional+analysis'>Functional Analysis</a></strong></li>
+</ul>
+
+<h2 id='overview_diagrams'>Overview diagrams</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/TVS+relationships'>topological vector spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/diagram+of+LCTVS+properties'>locally convex topological vector spaces</a></p>
+</li>
+</ul>
+
+<h2 id='basic_concepts'>Basic concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector space</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Banach+space'>Banach Spaces</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/reflexive+Banach+space'>reflexive</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert Spaces</a>, <a class='existingWikiWord' href='/nlab/show/Fr%C3%A9chet+space'>Fréchet Spaces</a>, <a class='existingWikiWord' href='/nlab/show/Sobolev+space'>Sobolev spaces</a>, <a class='existingWikiWord' href='/nlab/show/Lebesgue+space'>Lebesgue Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bornological+topological+vector+space'>Bornological Vector Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/barreled+topological+vector+space'>Barrelled Vector Spaces</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/linear+map'>linear operator</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded</a>, <a class='existingWikiWord' href='/nlab/show/unbounded+operator'>unbounded</a>, <a class='existingWikiWord' href='/nlab/show/self-adjoint+operator'>self-adjoint</a>, <a class='existingWikiWord' href='/nlab/show/compact+operator'>compact</a>, <a class='existingWikiWord' href='/nlab/show/Fredholm+operator'>Fredholm</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectrum+of+an+operator'>spectrum of an operator</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebras</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/functional+calculus'>functional calculus</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stone-Weierstrass+theorem'>Stone-Weierstrass theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectral+theory'>spectral theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectral+theorem'>spectral theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand+duality'>Gelfand duality</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functional+calculus'>functional calculus</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Riesz+representation+theorem'>Riesz representation theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/measure+theory'>measure theory</a></p>
+</li>
+</ul>
+
+<h2 id='topics_in_functional_analysis'>Topics in Functional Analysis</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/basis+in+functional+analysis'>Bases</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebraic+theories+in+functional+analysis'>Algebraic Theories in Functional Analysis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/an+elementary+treatment+of+Hilbert+spaces'>An Elementary Treatment of Hilbert Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/isomorphism+classes+of+Banach+spaces'>When are two Banach spaces isomorphic?</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/functional+analysis+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
 </div>
-<p><strong>Lars Hörmander</strong> was a Swedish analyst and Fields medalist. His work in <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, especially <a class='existingWikiWord' href='/nlab/show/microlocal+analysis'>microlocal analysis</a> and the analysis of linear <a class='existingWikiWord' href='/nlab/show/differential+equation'>PDEs</a> was a very central contribution to this theory in the 1960s and 1970s.</p>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The <em>Hörmander criterion</em> (<a href='#Hoermander90'>Hörmander 90, theorem 8.2.10</a>) says that the <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of two distributions</a> <math class='maruku-mathml' display='inline' id='mathml_85f23a279315336f7b46d82a0a4d24b195e6adbf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>u</mi> <mn>1</mn></msub><mo>⋅</mo><msub><mi>u</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>u_1 \cdot u_2</annotation></semantics></math> (on some <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> <math class='maruku-mathml' display='inline' id='mathml_85f23a279315336f7b46d82a0a4d24b195e6adbf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>) is well-defined if their <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front sets</a> <math class='maruku-mathml' display='inline' id='mathml_85f23a279315336f7b46d82a0a4d24b195e6adbf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>WF</mi><mo stretchy='false'>(</mo><mi>u</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>WF(u)</annotation></semantics></math> are such that for <math class='maruku-mathml' display='inline' id='mathml_85f23a279315336f7b46d82a0a4d24b195e6adbf_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>∈</mo><msubsup><mi>T</mi> <mi>x</mi> <mo>*</mo></msubsup><mi>X</mi></mrow><annotation encoding='application/x-tex'>v \in T^\ast_x X</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>covector</a> contained in one of the two wave front sets then the covector <math class='maruku-mathml' display='inline' id='mathml_85f23a279315336f7b46d82a0a4d24b195e6adbf_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>v</mi><mo>∈</mo><msubsup><mi>T</mi> <mi>x</mi> <mo>*</mo></msubsup><mi>X</mi></mrow><annotation encoding='application/x-tex'>-v \in T^\ast_x X</annotation></semantics></math> with the opposite <a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction</a> in <em>not</em> contained in the other wave front set:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_85f23a279315336f7b46d82a0a4d24b195e6adbf_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mi>WF</mi><mo stretchy='false'>(</mo><msub><mi>u</mi> <mn>1</mn></msub><mo stretchy='false'>)</mo><mo>+</mo><mi>WF</mi><mo stretchy='false'>(</mo><msub><mi>u</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo><mo>)</mo></mrow><munder><mo>×</mo><mrow><msup><mi>T</mi> <mo>*</mo></msup><mi>X</mi></mrow></munder><mi>X</mi><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>∅</mi></mrow><annotation encoding='application/x-tex'>
+  \left( WF(u_1) + WF(u_2) \right) \underset{T^\ast X}{\times} X
+  \;=\;
+  \emptyset
+
+</annotation></semantics></math></div>
+<p>where on the</p>
+
+<p>See at <em><a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a></em> for details.</p>
+
+<h2 id='references'>References</h2>
 
 <ul>
-<li><a href='https://en.wikipedia.org/wiki/Lars_H%C3%B6rmander'>Wikipdia entry</a></li>
+<li id='Hoermander90'><a class='existingWikiWord' href='/nlab/show/Lars+H%C3%B6rmander'>Lars Hörmander</a>, section 8.1 of <em>The analysis of linear partial differential operators</em>, vol. I, Springer 1983, 1990</li>
 </ul>
-
-<h2 id='writings'>Writings</h2>
-
-<p>Hörmander wrote several books including his magnus treatise</p>
-
-<ul>
-<li><em>The analysis of linear partial differential operators</em>, in 4 vols.: I. Distribution theory and Fourier analysis, II. Differential operators with constant coefficients, III. Pseudo-differential operators, IV. Fourier integral operators.</li>
-</ul>
-
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_407144ec568bec73808de47fbdd28f6b7d526d79_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a>, <a class='existingWikiWord' href='/nlab/show/compactly+supported+distribution'>compactly supported distribution</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>support of a distribution</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a>, <a class='existingWikiWord' href='/nlab/show/propagation+of+singularities+theorem'>propagation of singularities theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/H%C3%B6rmander%27s+criterion'>Hörmander&#39;s criterion</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/pullback+of+a+distribution'>pullback of distributions</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/tensor+product+of+distributions'>tensor product of distributions</a></p>
-</li>
-</ul>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 
 <p>
+ 
+</p>
+
+<p>
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on November 12, 2017 10:33:26 
+  Created on November 12, 2017 10:49:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.55.151)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lars+H%C3%B6rmander" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lars+H%C3%B6rmander/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Lars+H%C3%B6rmander" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lars+H%C3%B6rmander" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/H%C3%B6rmander%27s+criterion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Lars+H%C3%B6rmander" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/H%C3%B6rmander%27s+criterion" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Lars+H%C3%B6rmander" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/H%C3%B6rmander%27s+criterion" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Lars+H%C3%B6rmander" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/H%C3%B6rmander%27s+criterion" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
