--- a/pages/5221.html
+++ b/pages/5221.html
@@ -950,17 +950,17 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#History'>History</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#References'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <em>integral transform</em> on <a class='existingWikiWord' href='/nlab/show/function'>functions</a> is a <a class='existingWikiWord' href='/nlab/show/linear+map'>linear map</a> between functions on <a class='existingWikiWord' href='/nlab/show/space'>space</a>s <math class='maruku-mathml' display='inline' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> encoded by a function <math class='maruku-mathml' display='inline' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>product</a> space <math class='maruku-mathml' display='inline' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>×</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>X \times Y</annotation></semantics></math> and given by a formula of the type</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>function</mi><mspace width='thickmathspace'></mspace><mi>f</mi><mspace width='thickmathspace'></mspace><mi>on</mi><mspace width='thickmathspace'></mspace><mi>X</mi><mo stretchy='false'>)</mo><mo>↦</mo><mrow><mo>(</mo><mi>y</mi><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mi>K</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<p>An <em>integral transform</em> on <a class='existingWikiWord' href='/nlab/show/function'>functions</a> is a <a class='existingWikiWord' href='/nlab/show/linear+map'>linear map</a> between functions on <a class='existingWikiWord' href='/nlab/show/space'>space</a>s <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> encoded by a function <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>product</a> space <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>×</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>X \times Y</annotation></semantics></math> and given by a formula of the type</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>function</mi><mspace width='thickmathspace'></mspace><mi>f</mi><mspace width='thickmathspace'></mspace><mi>on</mi><mspace width='thickmathspace'></mspace><mi>X</mi><mo stretchy='false'>)</mo><mo>↦</mo><mrow><mo>(</mo><mi>y</mi><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mi>K</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   (function\;f\;on\;X) \mapsto
   \left(y \mapsto
   \int_{X} f(x) K(x,y) \right)
   \,,
 
 </annotation></semantics></math></div>
-<p>where on the right we have some kind of <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> over <math class='maruku-mathml' display='inline' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<p>where on the right we have some kind of <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> over <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
 
-<p>Here <math class='maruku-mathml' display='inline' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> is called the integral <strong>kernel</strong> of the transformation.</p>
+<p>Here <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> is called the integral <strong>kernel</strong> of the transformation.</p>
 
 <p>Typically the definition of an integral transform on functions involves some delicate technical issues concerning the precise nature of the function space, the <a class='existingWikiWord' href='/nlab/show/measure+space'>measure</a> with respect to which the integral is defined, etc.</p>
 
@@ -986,11 +986,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>The simplest example is <a class='existingWikiWord' href='/nlab/show/matrix+calculus'>matrix multiplication</a>, which corresponds to the case where <math class='maruku-mathml' display='inline' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_ba37c60dc06679755853a8eed8a4fc9dca6fef51_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/discrete+object'>discrete space</a>s.</p>
+<p>The simplest example is <a class='existingWikiWord' href='/nlab/show/matrix+calculus'>matrix multiplication</a>, which corresponds to the case where <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_d4d4bc58319df867a68854fd094b061e0c6f560c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/discrete+object'>discrete space</a>s.</p>
 </li>
 
 <li>
-<p>Standard examples involving genuine <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a> are for instance the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> and related <span class='newWikiWord'>Laplace transform<a href='/nlab/new/Laplace+transform'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/Mellin+transform'>Mellin transform</a>, <span class='newWikiWord'>Hankel transform<a href='/nlab/new/Hankel+transform'>?</a></span>, <span class='newWikiWord'>Hilbert transform<a href='/nlab/new/Hilbert+transform'>?</a></span>.</p>
+<p>Standard examples involving genuine <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a> are for instance the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> and related <a class='existingWikiWord' href='/nlab/show/Laplace+transform'>Laplace transform</a>, <a class='existingWikiWord' href='/nlab/show/Mellin+transform'>Mellin transform</a>, <span class='newWikiWord'>Hankel transform<a href='/nlab/new/Hankel+transform'>?</a></span>, <span class='newWikiWord'>Hilbert transform<a href='/nlab/new/Hilbert+transform'>?</a></span>.</p>
 </li>
 
 <li>
@@ -1034,6 +1034,12 @@ margin-left: 0em;
 
 <h2 id='References'>References</h2>
 
+<p>Discussion of integral kernels in the sense of <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a> (as n the <a class='existingWikiWord' href='/nlab/show/Schwartz+kernel'>Schwartz kernel theorem</a>) is in</p>
+
+<ul>
+<li id='Treves67'><a class='existingWikiWord' href='/nlab/show/Fran%C3%A7ois+Tr%C3%A8ves'>François Trèves</a>, <em>Topological Vector Spaces, Distributions and Kernels</em> (Academic Press, New York, 1967)</li>
+</ul>
+
 <p>Discussion of integral transforms in <a class='existingWikiWord' href='/nlab/show/derived+algebraic+geometry'>derived algebraic geometry</a> (see also at <em><a class='existingWikiWord' href='/nlab/show/geometric+infinity-function+theory'>geometric infinity-function theory</a></em>) is in</p>
 
 <ul>
@@ -1059,14 +1065,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 23, 2017 11:33:13 
+  Revised on November 12, 2017 15:18:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.109.127.172)
+  (94.220.55.151)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/integral+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integral+transform/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/integral+transform" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integral+transform" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/integral+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integral+transform/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/integral+transform" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integral+transform" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
