--- a/pages/18767.html
+++ b/pages/18767.html
@@ -324,6 +324,10 @@ margin-left: 0em;
 <li>
 <p>Nima Rasekh, <em>Yoneda Lemma for Simplicial Spaces</em>, 2017. <a href='https://arxiv.org/abs/1711.03160'>arxiv</a></p>
 </li>
+
+<li>
+<p>Nima Rasekh, <em>Cartesian Fibrations and Representability</em>, 2017. <a href='https://arxiv.org/abs/1711.03670'>arxiv</a></p>
+</li>
 </ul>
 
 <p>
@@ -400,14 +404,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November 10, 2017 03:23:24 
+  Revised on November 13, 2017 04:57:44 
   by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
   (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/right%2Fleft+fibration+of+simplicial+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/right%2Fleft+fibration+of+simplicial+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/right%2Fleft+fibration+of+simplicial+spaces/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/right%2Fleft+fibration+of+simplicial+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/right%2Fleft+fibration+of+simplicial+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
