--- a/pages/626.html
+++ b/pages/626.html
@@ -998,7 +998,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>there is also a string diagram calculus for <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, which extends that for monoidal categories regarded as one-object bicategories. Thus, the strings now represent 1-cells and the nodes 2-cells, leaving the two-dimensional planar regions cut out by the strings to represent the 0-cells. This makes it manifest that in general, string diagram notation is <em>Poincaré dual</em> to the <a class='existingWikiWord' href='/nlab/show/globe'>globular</a> notation: where one uses <math class='maruku-mathml' display='inline' id='mathml_741e0422bf8cbdefc3cc47589c0affc3ff216d95_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>-dimensional symbols, the other uses <math class='maruku-mathml' display='inline' id='mathml_741e0422bf8cbdefc3cc47589c0affc3ff216d95_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(2-d)</annotation></semantics></math>-dimensional symbols.</p>
+<p>there is also a string diagram calculus for <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, which extends that for monoidal categories regarded as one-object bicategories. Thus, the strings now represent 1-cells and the nodes 2-cells, leaving the two-dimensional planar regions cut out by the strings to represent the 0-cells. This makes it manifest that in general, string diagram notation is <em>Poincaré dual</em> to the <a class='existingWikiWord' href='/nlab/show/globe'>globular</a> notation: where one uses <math class='maruku-mathml' display='inline' id='mathml_f7b3460a57aa6d3e6735c118a8f8f38b208c025b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>-dimensional symbols, the other uses <math class='maruku-mathml' display='inline' id='mathml_f7b3460a57aa6d3e6735c118a8f8f38b208c025b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(2-d)</annotation></semantics></math>-dimensional symbols.</p>
 </li>
 
 <li>
@@ -1018,7 +1018,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>String diagrams for <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed monoidal categories</a> (see also at <em><a class='existingWikiWord' href='/nlab/show/Kelly-Mac+Lane+graph'>Kelly-Mac Lane graph</a></em>) are similar to those for <a class='existingWikiWord' href='/nlab/show/rigid+monoidal+category'>autonomous categories</a>, but a bit subtler, involving “boxes” to separate parts of the diagram. They were used informally <a href='http://math.ucr.edu/home/baez/qg-fall2006/index.html#computation'>here</a>, but can also be done in essentially the same way as the <a class='existingWikiWord' href='/nlab/show/proof+net'>proof net</a>s used in <a class='existingWikiWord' href='/nlab/show/intuitionistic+logic'>intuitionistic</a> <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a>; see <a href='http://hal.inria.fr/docs/00/34/73/36/PDF/prfnet1.pdf'>this paper</a>. Proof nets for <a class='existingWikiWord' href='/nlab/show/classical+mathematics'>classical</a> <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a> similarly give string diagrams for <a class='existingWikiWord' href='/nlab/show/star-autonomous+category'>*-autonomous categories</a>.</p>
+<p>String diagrams for <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed monoidal categories</a> (see also at <em><a class='existingWikiWord' href='/nlab/show/Kelly-Mac+Lane+graph'>Kelly-Mac Lane graph</a></em>) are similar to those for <a class='existingWikiWord' href='/nlab/show/rigid+monoidal+category'>autonomous categories</a>, but a bit subtler, involving “boxes” to separate parts of the diagram. They were used informally by Baez and Stay <a href='#BaezQG06'>here</a> and <a href='#Rosetta'>here</a>, but can also be done in essentially the same way as the <a class='existingWikiWord' href='/nlab/show/proof+net'>proof nets</a> used in <a class='existingWikiWord' href='/nlab/show/intuitionistic+logic'>intuitionistic</a> <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a>; see <a href='#Lamarche08'>Lamarche</a>.</p>
+</li>
+
+<li>
+<p>Proof nets for <a class='existingWikiWord' href='/nlab/show/classical+mathematics'>classical</a> <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a> similarly give string diagrams for <a class='existingWikiWord' href='/nlab/show/star-autonomous+category'>*-autonomous categories</a>, or more generally <a class='existingWikiWord' href='/nlab/show/linearly+distributive+category'>linearly distributive categories</a>; see <a href='#BCST'>Blute-Cockett-Seely-Trimble</a>.</p>
 </li>
 </ul>
 
@@ -1196,6 +1200,26 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>For <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed monoidal categories</a> in</p>
+
+<ul id='BaezQG06'>
+<li><a class='existingWikiWord' href='/nlab/show/John+Baez'>John Baez</a>, Quantum Gravity Seminar - Fall 2006. <a href='http://math.ucr.edu/home/baez/qg-fall2006/index.html#computation'>http://math.ucr.edu/home/baez/qg-fall2006/index.html#computation</a></li>
+</ul>
+
+<ul id='Rosetta'>
+<li><a class='existingWikiWord' href='/nlab/show/John+Baez'>John Baez</a> and <a class='existingWikiWord' href='/nlab/show/Mike+Stay'>Mike Stay</a>, <em>Physics, Topology, Logic and Computation: A Rosetta Stone</em>, <a href='https://arxiv.org/abs/0903.0340'>arxiv</a></li>
+</ul>
+
+<ul id='Lamarche08'>
+<li>Francois Lamarche, <em>Proof Nets for Intuitionistic Linear Logic: Essential nets</em>, 2008 <a href='http://hal.inria.fr/docs/00/34/73/36/PDF/prfnet1.pdf'>pdf</a></li>
+</ul>
+
+<p>For <a class='existingWikiWord' href='/nlab/show/linearly+distributive+category'>linearly distributive categories</a> in</p>
+
+<ul id='BCST'>
+<li><a class='existingWikiWord' href='/nlab/show/Richard+Blute'>Richard Blute</a> and <a class='existingWikiWord' href='/nlab/show/Robin+Cockett'>Robin Cockett</a> and <span class='newWikiWord'>R.A.G. Seely<a href='/nlab/new/R.A.G.+Seely'>?</a></span> and <a class='existingWikiWord' href='/nlab/show/Todd+Trimble'>Todd Trimble</a>, <em>Natural deduction and coherence for weakly distributive categories.</em></li>
+</ul>
+
 <p>For <a class='existingWikiWord' href='/nlab/show/indexed+monoidal+category'>indexed monoidal categories</a> in</p>
 
 <ul>
@@ -1243,14 +1267,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 26, 2017 18:27:59 
-  by <span class="newWikiWord">Ying Hong Tham<a href="/nlab/new/Ying+Hong+Tham">?</a></span>
-  (129.49.88.82)
+  Revised on November 13, 2017 12:43:18 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (192.195.154.151)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+diagram/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/string+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+diagram/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/string+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
