--- a/pages/7737.html
+++ b/pages/7737.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -496,7 +496,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Maybe one can assign a <a class='existingWikiWord' href='/nlab/show/fundamental+category'>fundamental category</a> to a stratified space. This has been studied for <a class='existingWikiWord' href='/nlab/show/poset-stratified+space'>poset-stratified spaces</a> – see there under “exit path <math class='maruku-mathml' display='inline' id='mathml_016a55c2a2cb20ac602e5f61f7684f3b2e8df7b9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-category” for more.</p>
+<p>Maybe one can assign a <a class='existingWikiWord' href='/nlab/show/fundamental+category'>fundamental category</a> to a stratified space. This has been studied for <a class='existingWikiWord' href='/nlab/show/poset-stratified+space'>poset-stratified spaces</a> – see there under “exit path <math class='maruku-mathml' display='inline' id='mathml_7bec9314f9e11e97258979145bda948e05b6156f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-category” for more.</p>
 </li>
 
 <li>
@@ -572,9 +572,13 @@ margin-left: 0em;
 <li>David Ayala, John Francis, Nick Rozenblyum, <em>A stratified homotopy hypothesis</em>, <a href='http://arxiv.org/abs/1502.01713'>arXiv</a></li>
 </ul>
 
-<p>
+<p>whilst an earlier paper on exit paths is</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/David+Treumann'>David Treumann</a>, <em><a href='https://www2.bc.edu/david-treumann/epacs.pdf'>Exit paths and constructible stacks</a></em>, Compositio Math. 145 (2009), 1504–1532 
  
-</p>
+</li>
+</ul>
 
 <p>
  
@@ -582,14 +586,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 13, 2016 10:07:05 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (192.12.13.8)
+  Revised on November 14, 2017 03:13:19 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (2.30.235.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stratified+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stratified+space/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/stratified+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stratified+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stratified+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stratified+space/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/stratified+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stratified+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
